--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,31 @@
-<h1>Pemendek URL</h1>
-<div>
-<%= link_to  "Klik disini untuk memendekkan URL", '/links' %>
+<div class="relative overflow-hidden bg-white">
+  <div class="max-w-screen-xl mx-auto">
+    <div class="relative z-10 pb-8 bg-white sm:pb-16 md:pb-20 lg:w-full lg:pb-28 xl:pb-32">
+
+
+      <div class="relative px-4 pt-6 sm:px-6 lg:px-8">
+      </div>
+
+      <main class="max-w-screen-xl px-4 mx-auto mt-10 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
+        <div class="sm:text-center">
+          <h2 class="text-4xl font-extrabold leading-10 tracking-tight text-gray-900 sm:text-5xl sm:leading-none md:text-6xl">
+            Pemendek URL
+          </h2>
+          <p class="mt-3 text-base text-gray-700 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl">
+            Pendekkan URL yang panjang!
+          </p>
+          <div class="mt-5 sm:mt-8 sm:flex sm:justify-center">
+            <div class="rounded-md shadow">
+              <%= link_to  "Coba Sekarang!", '/links', target: "_blank", class: "flex items-center justify-center w-full px-8 py-3 text-base font-medium leading-6 text-white transition duration-150 ease-in-out bg-indigo-600 border border-transparent rounded-md hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo md:py-4 md:text-lg md:px-10" %>
+            </div>
+            <div class="mt-3 sm:mt-0 sm:ml-3">
+              <a href="http://github.com/arifikhsan/url_shortener_rails" target="_blank" class="flex items-center justify-center w-full px-8 py-3 text-base font-medium leading-6 text-indigo-700 transition duration-150 ease-in-out bg-indigo-100 border border-transparent rounded-md hover:text-indigo-600 hover:bg-indigo-50 focus:outline-none focus:shadow-outline-indigo focus:border-indigo-300 md:py-4 md:text-lg md:px-10">
+                Github
+              </a>
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
+  </div>
 </div>
